--- a/index.html
+++ b/index.html
@@ -4,32 +4,41 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css">		
+		<link rel="stylesheet" href="styles.css" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+
 		<title>WebStudio</title>
 	</head>
 
 	<body>
 		<!--Заголовок-->
 		<header>
-			<a href="./index.html">WebStudio</a>
-			<nav>
-				<ul>
-					<li><a href="#studia">Студия</a></li>
-					<li><a href="#portfolio">Портфолио</a></li>
-					<li><a href="#kontakt">Контакты</a></li>
+			<a lang="en" href="./index.html" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+			<nav class="header-nav">
+				<ul class="header-list">
+					<li><a href="./index.html" class="link-activ">Студия</a></li>
+					<li><a href="./portfolio.html" class="link-pasiv">Портфолио</a></li>
+					<li><a href="./index.html" class="link-pasiv">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			<ul class="linc-contact">
+				<li><a href="mailto:info@devstudio.com" class="linc-mail">info@devstudio.com</a> </li>
+				<li><a href="tel:+380961111111" class="linc-tel">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
 		<main>
 			<!--Секція-1_Эффективные решения для вашего бизнеса-->
-			<section>
-				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button type="button">Заказать услугу</button>
+			<section class="section-titl">
+				<h1 class="title">Эффективные решения для вашего бизнеса</h1>
+				<button type="button" class="button-zakaz">Заказать услугу</button>
 			</section>
 
 			<!--Секція-2_Наши преимущества-->
@@ -37,27 +46,27 @@
 				<h2 hidden>Наши преимущества</h2>
 				<ul>
 					<li>
-						<h3>Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						<h3 class="head-rysy">Внимание к деталям</h3>
+						<p class="head-opys">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li>
-						<h3>Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						<h3 class="head-rysy">Пунктуальность</h3>
+						<p class="head-opys">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 					<li>
-						<h3>Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						<h3 class="head-rysy">Планирование</h3>
+						<p class="head-opys">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 					</li>
 					<li>
-						<h3>Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						<h3 class="head-rysy">Современные технологии</h3>
+						<p class="head-opys">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
 				</ul>
 			</section>
 
 			<!--Секція_3-Чем мы занимаемся-->
 			<section>
-				<h2>Чем мы занимаемся</h2>
+				<h2 class="head-poslugu">Чем мы занимаемся</h2>
 				<ul>
 					<li>
 						<img src="./images/1-work-01.jpg" alt="Програмированиє" width="370" height="294" />
@@ -73,39 +82,43 @@
 
 			<!--Секція_4_Наша команда-->
 			<section>
-				<h2>Наша команда</h2>
+				<h2 class="head-command">Наша команда</h2>
 				<ul>
 					<li>
 						<img src="./images/2-komand-01.jpg" alt="" width="270" height="260" />
-						<h3>Игорь Демьяненко</h3>
-						<p lang="en">Product Designer</p>
+						<h3 class="mame">Игорь Демьяненко</h3>
+						<p lang="en" class="work">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/2-komand-02.jpg" alt="" width="270" height="260" />
-						<h3>Ольга Репина</h3>
-						<p lang="en">Frontend Developer</p>
+						<h3 class="mame">Ольга Репина</h3>
+						<p lang="en" class="work">Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./images/2-komand-03.jpg" alt="" width="270" height="260" />
-						<h3>Николай Тарасов</h3>
-						<p lang="en">Marketing</p>
+						<h3 class="mame">Николай Тарасов</h3>
+						<p lang="en" class="work">Marketing</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 
 		<!--Підвал-->
-		<footer>
-			<a href="./index.html">WebStudio</a>
+		<footer class="footer">
+			<a lang="en" href="./index.html" class="header-logo"><span class="logo-web">Web</span>Studio</a>
 			<address>
 				<ul>
 					<li
-						><a href="https://goo.gl/maps/hTdqzPJ7rCsYidR97" target="_blank" rel="noopener noreferrer nofollow"
+						><a
+							href="https://goo.gl/maps/hTdqzPJ7rCsYidR97"
+							target="_blank"
+							rel="noopener noreferrer nofollow"
+							class="footer-adress"
 							>г. Киев, пр-т Леси Украинки, 26</a
 						>
 					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
