--- a/portfolio.html
+++ b/portfolio.html
@@ -4,34 +4,115 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css">		
+		<link rel="stylesheet" href="styles.css" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+
 		<title>Portfolio</title>
 	</head>
 
 	<body>
+		<!--Заголовок-->
+		<header>
+			<a lang="en" href="./index.html" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+			<nav class="header-nav">
+				<ul class="header-list">
+					<li><a href="./index.html" class="link-pasiv">Студия</a></li>
+					<li><a href="./portfolio.html" class="link-activ">Портфолио</a></li>
+					<li><a href="./index.html" class="link-pasiv">Контакты</a></li>
+				</ul>
+			</nav>
+			<ul class="linc-contact">
+				<li><a href="mailto:info@devstudio.com" class="linc-mail">info@devstudio.com</a> </li>
+				<li><a href="tel:+380961111111" class="linc-tel">+38 096 111 11 11</a></li>
+			</ul>
+		</header>
+		<main>
 			<!--Секція_1_Портфоліо-->
+			<h2 hidden>фільтр послуг</h2>
 			<section>
-
+				<button type="button" class="button-activ">Все</button>
+				<button type="button" class="batton-pasiv">Веб-сайты</button>
+				<button type="button" class="batton-pasiv">Приложения</button>
+				<button type="button" class="batton-pasiv">Дизайн</button>
+				<button type="button" class="batton-pasiv">Маркетинг</button>
 			</section>
 
-            <!--Секція_2_Портфоліо-->
-            <section>
-
-            </section>
+			<!--Секція_2_Портфоліо-->
+			<h2 hidden>Послуги</h2>
+			<section>
+				<ul>
+					<li>
+						<img src="images/3-portfolio-01.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Технокряк</h3>
+						<p class="portfolio-text">Веб-сайт</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-02.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Постер New Orlean vs Golden Star</h3>
+						<p class="portfolio-text">Дизайн</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-03.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Ресторан Seafood</h3>
+						<p>Приложение</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-04.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Проект Prime</h3>
+						<p class="portfolio-text">Маркетинг</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-05.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Проект Boxes</h3>
+						<p class="portfolio-text">Приложение</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-06.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Inspiration has no Borders</h3>
+						<p class="portfolio-text">Веб-сайт</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-07.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Издание Limited Edition</h3>
+						<p class="portfolio-text">Дизайн</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-08.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Проект LAB</h3>
+						<p class="portfolio-text">Маркетинг</p>
+					</li>
+					<li>
+						<img src="images/3-portfolio-09.jpg" alt="" width="370" height="294" />
+						<h3 class="portfolio-hed">Growing Business</h3>
+						<p class="portfolio-text">Приложение</p>
+					</li>
+				</ul>
+			</section>
 		</main>
 
 		<!--Підвал-->
-		<footer>
-			<a href="./index.html">WebStudio</a>
+		<footer class="footer">
+			<a lang="en" href="./index.html" class="header-logo"><span class="logo-web">Web</span>Studio</a>
 			<address>
 				<ul>
 					<li
-						><a href="https://goo.gl/maps/hTdqzPJ7rCsYidR97" target="_blank" rel="noopener noreferrer nofollow"
+						><a
+							href="https://goo.gl/maps/hTdqzPJ7rCsYidR97"
+							target="_blank"
+							rel="noopener noreferrer nofollow"
+							class="footer-adress"
 							>г. Киев, пр-т Леси Украинки, 26</a
 						>
 					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
