--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 		<!--Підвал-->
 		<footer class="footer">
-			<a lang="en" href="./index.html" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+			<a lang="en" href="./index.html" class="header-logo-futer"><span class="logo-web">Web</span>Studio</a>
 			<address>
 				<ul>
 					<li
