--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,10 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
-
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 
 		<title>Portfolio</title>
 	</head>
@@ -34,63 +33,62 @@
 			</ul>
 		</header>
 		<main>
-			<!--Секція_1_Портфоліо-->
-			<h2 hidden>фільтр послуг</h2>
+			<!--_Портфоліо-->
+			<h1 hidden>Послуги</h1>
 			<section>
-				<button type="button" class="button-activ">Все</button>
-				<button type="button" class="batton-pasiv">Веб-сайты</button>
-				<button type="button" class="batton-pasiv">Приложения</button>
-				<button type="button" class="batton-pasiv">Дизайн</button>
-				<button type="button" class="batton-pasiv">Маркетинг</button>
-			</section>
-
-			<!--Секція_2_Портфоліо-->
-			<h2 hidden>Послуги</h2>
-			<section>
+				<ul>
+					<li><button type="button" class="button-activ">Все</button></li>
+					<li><button type="button" class="batton-pasiv">Веб-сайты</button></li>
+					<li><button type="button" class="batton-pasiv">Приложения</button></li>
+					<li><button type="button" class="batton-pasiv">Дизайн</button></li>
+					<li><button type="button" class="batton-pasiv">Маркетинг</button></li>
+				</ul>
+			
+			<!--_Поcлуги-->	
 				<ul>
 					<li>
 						<img src="images/3-portfolio-01.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Технокряк</h3>
+						<h2 class="portfolio-hed">Технокряк</h2>
 						<p class="portfolio-text">Веб-сайт</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-02.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Постер New Orlean vs Golden Star</h3>
+						<h2 class="portfolio-hed">Постер New Orlean vs Golden Star</h2>
 						<p class="portfolio-text">Дизайн</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-03.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Ресторан Seafood</h3>
+						<h2 class="portfolio-hed">Ресторан Seafood</h2>
 						<p>Приложение</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-04.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Проект Prime</h3>
+						<h2 class="portfolio-hed">Проект Prime</h2>
 						<p class="portfolio-text">Маркетинг</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-05.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Проект Boxes</h3>
+						<h2 class="portfolio-hed">Проект Boxes</h2>
 						<p class="portfolio-text">Приложение</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-06.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Inspiration has no Borders</h3>
+						<h2 class="portfolio-hed">Inspiration has no Borders</h2>
 						<p class="portfolio-text">Веб-сайт</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-07.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Издание Limited Edition</h3>
+						<h2 class="portfolio-hed">Издание Limited Edition</h2>
 						<p class="portfolio-text">Дизайн</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-08.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Проект LAB</h3>
+						<h2 class="portfolio-hed">Проект LAB</h2>
 						<p class="portfolio-text">Маркетинг</p>
 					</li>
 					<li>
 						<img src="images/3-portfolio-09.jpg" alt="" width="370" height="294" />
-						<h3 class="portfolio-hed">Growing Business</h3>
+						<h2 class="portfolio-hed">Growing Business</h2>
 						<p class="portfolio-text">Приложение</p>
 					</li>
 				</ul>
@@ -99,7 +97,7 @@
 
 		<!--Підвал-->
 		<footer class="footer">
-			<a lang="en" href="./index.html" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+			<a lang="en" href="./index.html" class="header-logo-futer"><span class="logo-web">Web</span>Studio</a>
 			<address>
 				<ul>
 					<li
